fixed date alignment

--- a/UpdatedPortfolio/src/css/Personalize.css
+++ b/UpdatedPortfolio/src/css/Personalize.css
@@ -171,4 +171,10 @@ ul li {
 
     }
 
+    .Duration {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+    }
+
 }
